--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
 body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #333;
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
-    color: #333;
 }
 
 header {
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    background-color: #64bad1;
+    color: #fff;
+    padding: 1em;
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+h1 {
+    margin: 0;
+    font-size: 2em;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
 nav ul {
@@ -26,33 +27,56 @@ nav ul {
     display: flex;
 }
 
-nav ul li {
-    margin-left: 20px;
+nav li {
+    margin-right: 1em;
 }
 
-nav ul li:first-child {
-    margin-left: 0;
-}
-
-nav ul li a {
-    color: #333;
-    text-decoration: none;
-    font-weight: 600;
-}
-
-.hero {
-    background-color: #03a9f4;
+nav a {
     color: #fff;
-    padding: 100px 20px;
+    text-decoration: none;
+}
+
+section.hero {
+    background-color: #f5f5f5;
+    padding: 2em;
     text-align: center;
 }
 
-.hero h1 {
-    font-size: 48px;
+section.hero h2 {
+    font-size: 2.5em;
+    font-weight: 700;
+    margin-bottom: 1em;
+}
+
+section.posts {
+    padding: 2em;
+}
+
+section.posts h2 {
+    font-size: 2em;
+    font-weight: 700;
+    margin-bottom: 1em;
+}
+
+article {
+    margin-bottom: 2em;
+}
+
+article h3 {
+    font-size: 1.5em;
+    font-weight: 700;
+    margin-bottom: 0.5em;
+}
+
+article p {
+    font-size: 1em;
+    font-weight: 400;
     margin: 0;
 }
 
-.hero p {
-    font-size: 24px;
-    margin-bottom: 30px;
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 1em;
+    text-align: center;
 }
