--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Oxygen', 'Noto Sans JP', sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #333;
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #64bad1;
+    background-color: #737f81;
     color: #fff;
     padding: 1em;
 }
