--- a/style.css
+++ b/style.css
@@ -5,6 +5,15 @@ body {
     color: #333;
     margin: 0;
     padding: 0;
+
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+
+}
+
+main {
+    flex: 1;
 }
 
 header {
@@ -36,6 +45,11 @@ nav a {
     text-decoration: none;
 }
 
+
+section {
+    padding: 2em;
+}
+
 section.hero {
     background-color: #f5f5f5;
     padding: 2em;
@@ -48,9 +62,6 @@ section.hero h2 {
     margin-bottom: 1em;
 }
 
-section.posts {
-    padding: 2em;
-}
 
 section.posts h2 {
     font-size: 2em;
