added page for coffee.

--- a/style.css
+++ b/style.css
@@ -95,6 +95,11 @@ p.date {
 
 article {
     margin-bottom: 6em;
+    margin-right: 2em;
+    margin-left: 2em;
+    width: 22em;
+    float:left;
+
 }
 
 article h3 {
@@ -119,4 +124,18 @@ footer {
 
 .centered_text {
     text-align: center;
+}
+
+.flexbox {
+    display: flex;
+    flex-flow: wrap;
+    height: 200px;
+    border: 1px solid #333;
+}
+
+.flex-item {
+    background: #7ba4ab;
+    border: 1px solid black;
+    width: 40%;
+    height: 40%;
 }
